syntax = "proto3";
option java_package = "net.serhiri.customerservice.stub";

service CustomerService {
    rpc getAllCustomers(GetAllCustomersRequest)returns (getCustomersResponse);
    rpc getCustomerById(GetCustomerByIdRequest) returns (GetCustomerByIdResponse);
    rpc saveCustomer(saveCustomerRequest)returns (saveCustomerResponse);
}
message GetAllCustomersRequest{}
message getCustomersResponse{
   repeated Customer customers = 1;
}
message GetCustomerByIdRequest{
    int64 customerId=1;
}
 message GetCustomerByIdResponse{
     Customer customer=1;
 }
message saveCustomerRequest{
    CustomerRequest customer=1;
}
message saveCustomerResponse{
    Customer customer = 1;
}
message Customer{
    int64 id=1;
    string name=2;
    string email=3;
}
message CustomerRequest{
    string name=1;
    string email=2;
}


